; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/fastsocket/extr_fastsocket_core.c_fsocket_process_affinity_restore.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/fastsocket/extr_fastsocket_core.c_fsocket_process_affinity_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.cpumask = type { i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@fastsocket_spawn_cpuset = common dso_local global i32 0, align 4
@fastsocket_spawn_cpu = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @fsocket_process_affinity_restore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fsocket_process_affinity_restore(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cpumask, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 @cpumask_clear(%struct.cpumask* %3)
  %5 = getelementptr inbounds %struct.cpumask, %struct.cpumask* %3, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @cpus_setall(i32 %6)
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @sched_setaffinity(i32 %10, %struct.cpumask* %3)
  %12 = load i32, i32* %2, align 4
  %13 = icmp ne i32 -1, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @fastsocket_spawn_cpuset, align 4
  %17 = call i32 @cpu_clear(i32 %15, i32 %16)
  %18 = load i32, i32* @fastsocket_spawn_cpu, align 4
  %19 = add nsw i32 %18, -1
  store i32 %19, i32* @fastsocket_spawn_cpu, align 4
  br label %20

20:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @cpumask_clear(%struct.cpumask*) #1

declare dso_local i32 @cpus_setall(i32) #1

declare dso_local i32 @sched_setaffinity(i32, %struct.cpumask*) #1

declare dso_local i32 @cpu_clear(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
